--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  agora_rtc_engine: ^6.2.0
+  permission_handler: ^9.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
